# KURS

./: .env_template  .gitignore  README.md  pyproject.toml  requirements.txt
src/: api.py  main.py  reports.py  services.py  utils.py  views.py
tests/: test_reports.py  test_services.py  test_utils.py  test_views.py
